2008-11-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix regression introduced by AM_DEFAULT_SOURCE_EXT.
	* automake.in (handle_source_transform): Use the right variable
	when determining whether to apply the old rule for the libtool
	library default source name.
	Testsuite failure exposed by Bob Proulx' build daemon.

2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New maintainer target release-stats.
	* Makefile.am (release-stats): New target, to help computing the
	entries in the statistics table in automake.texi.
	* doc/automake.texi (Releases): Reformat a bit.  Add number of
	generated files.  Add entry for 1.10.1.

	Choose default source extension: AM_DEFAULT_SOURCE_EXT.
	* automake.in (handle_source_transform): Accept unconditional
	literal extension in AM_DEFAULT_SOURCE_EXT as override for the
	default source extension `.c'.  If set, ignore the old default
	source rule for libtool libraries.
	* doc/automake.texi (Default _SOURCES): Document this.
	* NEWS: Update.
	* tests/specflg10.test: New test.
	* tests/Makefile.am: Update.
	Suggestion by Akim Demaille.

	Fix maintainer-check failure.
	* tests/parallel-am.test: Rename variable to not match pattern
	used in maintainer-check.

2008-10-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Fix typo.
	Spotted by Jim Meyering.

2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Parallel automake --add-missing: serialized file installs.
	* automake.in (QUEUE_CONF_FILE, QUEUE_LOCATION, QUEUE_STRING):
	New serialization keys.
	($required_conf_file_queue): New file global.
	(queue_required_conf_file, require_queued_conf_file): New
	functions, to queue and dequeue requirements for aux dir files.
	(require_conf_file): Enqueue if needed.
	(get_number_of_threads): Can do threads with --add-missing now.
	(handle_makefiles_threaded): Let worker threads enqueue, let
	master attend to queued requirements at the right time.
	* tests/parallel-am.test: Explain the purpose of the include
	chain used here.