@@ -2896,7 +2896,8 @@ The Autoconf Manual}.
 
 @item AC_SUBST
 The first argument is automatically defined as a variable in each
-generated @file{Makefile.in}.  @xref{Setting Output Variables, , Setting
+generated @file{Makefile.in}, unless @code{AM_SUBST_NOTMAKE} is also
+used for this variable.  @xref{Setting Output Variables, , Setting
 Output Variables, autoconf, The Autoconf Manual}.
 
 If the Autoconf manual says that a macro calls @code{AC_SUBST} for
@@ -2940,6 +2941,17 @@ generated @file{Makefile.in}s, unless @var{default-mode} is
 @samp{enable}.  This macro defines the @code{MAINTAINER_MODE}
 conditional, which you can use in your own @file{Makefile.am}.
 @xref{maintainer-mode}.
+
+@item AM_SUBST_NOTMAKE(@var{var})
+Prevent Automake from defining a variable @var{var}, even if it is
+substituted by @command{config.status}.  Normally, Automake defines a
+@command{make} variable for each @command{configure} substitution,
+i.e., for each @code{AC_SUBST([@var{var}])}.  This macro prevents that
+definition from Automake.  If @code{AC_SUBST} has not been called
+for this variable, then @code{AM_SUBST_NOTMAKE} has no effects.
+Preventing variable definitions may be useful for substitution of
+multi-line values, where @code{@var{var} = @@@var{value}@@} might yield
+unintended results.
 
 @item m4_include
 Files included by @file{configure.ac} using this macro will be
