@@ -1,5 +1,14 @@
 2008-11-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	New public macro AM_SUBST_NOTMAKE.
+	* m4/substnot.m4 (AM_SUBST_NOTMAKE): New public macro; invoke
+	_AM_SUBST_NOTMAKE with arguments.
+	* doc/automake.texi (Optional): Document it.
+	* NEWS: Update.
+	* tests/subst4.test: New test.
+	* tests/Makefile.am: Update.
+	Suggestion by Bruno Haible.
+
 	Fix regression introduced by AM_DEFAULT_SOURCE_EXT.
 	* automake.in (handle_source_transform): Use the right variable
 	when determining whether to apply the old rule for the libtool
